deployments/kubernetes/base/cart/cart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart
  namespace: payment-gateway
spec:
  selector:
    app: cart
  ports:
    - name: http-metrics
      port: 8090
      targetPort: 8090
    - name: grpc
      port: 50060
      targetPort: 50060
  type: ClusterIP
